--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "the-mountain",
   "version": "1.0.0",
   "description": "Vous allez reproduire une maquette en utilisant tailwind",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:css": "tailwindcss build -i ./css/input.css -o ./css/output.css --watch"
